--- a/team.css
+++ b/team.css
@@ -758,7 +758,7 @@
         width:200px;
         height: auto;
         object-fit: contain;
-        filter: brightness(0) invert(1);
+          /*filter: brightness(0) invert(1);*/
         transition: all 0.4s ease;
       }
 
