--- a/services.css
+++ b/services.css
@@ -990,7 +990,7 @@ footer {
   width: 150px;
   height: auto;
   object-fit: contain;
-  filter: brightness(0) invert(1);
+    /*filter: brightness(0) invert(1);*/
   transition: all 0.4s ease;
 }
 
